stryker/force-app/main/default/objects/Highest_wickets__c/Highest_wickets__c.object-meta.xml
<CustomObject>
    <label>Highest wickets</label>
    <nameField>
        <displayFormat>w-{0000}</displayFormat>
        <label>Highest wickets Names</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Highest wickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>