stryker/force-app/main/default/objects/Highest_wickets__c/fields/Econumy__c.field-meta.xml
<CustomField>
    <fullName>Econumy__c</fullName>
    <label>Econumy</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>