stryker/force-app/main/default/objects/Highest_wickets__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <externalId>true</externalId>
    <label>ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>