stryker/force-app/main/default/objects/Highest_wickets__c/fields/Matches__c.field-meta.xml
<CustomField>
    <fullName>Matches__c</fullName>
    <label>Matches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>