stryker/force-app/main/default/objects/Highest_wickets__c/fields/Player_Name__c.field-meta.xml
<CustomField>
    <fullName>Player_Name__c</fullName>
    <label>Player Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>