stryker/force-app/main/default/objects/Highest_wickets__c/fields/Wickets__c.field-meta.xml
<CustomField>
    <fullName>Wickets__c</fullName>
    <label>Wickets</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>