stryker/force-app/main/default/objects/Highest_wickets__c/listViews/all_details.listView-meta.xml
<ListView>
    <fullName>all_details</fullName>
    <columns>NAME</columns>
    <columns>Econumy__c</columns>
    <columns>ID__c</columns>
    <columns>Matches__c</columns>
    <columns>Player_Name__c</columns>
    <columns>Player_Team__c</columns>
    <columns>Wickets__c</columns>
    <filterScope>Everything</filterScope>
    <label>all-details</label>
</ListView>